[package]
name = "hashing" 
version = "0.1.0"
authors = ["Ben Marsh <benjamin.marsh@mintlayer.org>"]

[workspace]
members = [
    "blake2",
    "ripemd160",
    "sha1",
    "sha2",
    "sha3",
]

[profile.dev]
opt-level = 2

[dependencies.blake2]
path = "blake2"

[dependencies.ripemd160]
path = "ripemd160"

[dependencies.sha1]
path = "sha1"

[dependencies.sha2]
path = "sha2"

[dependencies.sha3]
path = "sha3"
